--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,7 @@ background-image: url(../img/background/home-bg.jpg);
 }
 
 .section-bg-home.section-bg-home-light {
-background-image: url(../img/background/home-light-bg.jpg);
+background-image: url(../img/background/home-bg.jpg);
 }
 
 
